--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Halbrook</title>
-    <link rel="stylesheet" href="./src/css/main.css">
+    <link rel="stylesheet" href="./src/css/home.css">
 </head>
 <body>
     <div class="container">
-        <h1>Hello</h1>
-
+        <header>
+            <h1>Hello</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </header>
+        
         <section>
             <h2>I am a section with api calls</h2>
         </section>
