--- a/index.html
+++ b/index.html
@@ -8,27 +8,28 @@
     <link rel="stylesheet" href="./src/css/home.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Hello</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </header>
+    <nav class="main-nav">
+        <div class="container">
+            <ul class="main-nav__links">
+            <li><a href="">link</a></li>
+            <li><a href="">link</a></li>
+            <li><a href="">link</a></li>
+            <li><a href="">link</a></li>
+        </ul>
+        </div>
         
-        <section>
-            <h2>I am a section with api calls</h2>
-        </section>
-        <section>
-            <h2>I am a section with api calls</h2>
-        </section>
-        <section>
-            <h2>I am a section with api calls</h2>
-        </section>
-        <section>
-            <h2>I am a section with api calls</h2>
-        </section>
-        <section>
-            <h2>I am a section with api calls</h2>
-        </section>
+    </nav>
+     <header>
+        <h1>Hey there! I'm Michael!</h1>
+        <p></p>
+    </header>
+    <div class="container">
+       
+        <div class="portfolio">
+            <section class="port">
+                <h2>I am a section with api calls</h2>
+            </section>
+        </div>
 
         <a href="./src/pages/test.html">TEST</a>
     </div>
