--- a/src/pages/test.html
+++ b/src/pages/test.html
@@ -10,6 +10,6 @@
     <h1>This is PUG!!</h1>
     <li>finally working!!</li>
     <li>finally working!!</li>
-    <li>finally working!!</li>
+    <li>finally working!!</li><a href="../../index.html">Home</a>
   </body>
 </html>
